# lsof

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_CN.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: cli.rs  error.rs  event.rs  filter.rs  main.rs  output.rs
src/app/: action.rs  mod.rs  state.rs
src/model/: mod.rs  network.rs  open_file.rs  process.rs
src/platform/: linux.rs  macos.rs  mod.rs
src/ui/: detail_view.rs  mod.rs  search_view.rs  theme.rs
src/ui/widgets/: file_table.rs  file_tree.rs  mod.rs  net_table.rs  summary.rs
tests/: cli_output_test.rs  filter_test.rs  platform_test.rs
