[package]
name = "loof"
version = "0.1.0"
edition = "2021"
description = "A modern lsof replacement with interactive TUI"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
sysinfo = "0.30"
thiserror = "2"
fuzzy-matcher = "0.3"
users = "0.11"
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
nix = { version = "0.29", features = ["fs"] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
